--- a/index1.html
+++ b/index1.html
@@ -19,7 +19,7 @@
       <h2 id="contact-us">Contact Us</h2>
 
     <hr>
-      <h2 class="about-me">About me</h2>
+      <h2 class="about-me"><b>Bold</b>About me</h2>
 
     <hr>
 
