--- a/section.html
+++ b/section.html
@@ -35,4 +35,7 @@
         elements selectors are less powerful than the class
         id is over write the classes
         and class is over write the elements
+
+    4.Pseudo selectors    
+
 -->
