--- a/index1.html
+++ b/index1.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css"
-        href="../css/style.css">
+        href="../html/style.css">
         <title>My website</title>
     </head>
     
