pseudo-link-visited

--- a/index1.html
+++ b/index1.html
@@ -61,6 +61,8 @@
       </ul>  
       
       <h2 clsaa="subtitle" id="services" style="color: steelblue;">Services</h2>
+
+      <a href="https://www.google.com" id="google-link">Click here  to go Google </a>
       <table>
         <tbody>
           <tr>
