--- a/index1.html
+++ b/index1.html
@@ -78,6 +78,15 @@
         </tbody>
       </table>
 
+      <img src="../html/horse.jpeg">
+      <h2>Contact Us</h2>
+      <form>
+        <input type="text" placeholder="Full Name">
+        <input type="email" placeholder="Email">
+        <textarea></textarea>
+        <button>Submit</button>
+      </form>
+
       
 
 
