--- a/index1.html
+++ b/index1.html
@@ -45,6 +45,14 @@
 
 
       <hr>
+      <ul>
+        <li>This is my new design website</li>
+        <li>
+          <ol>
+            <li>My numbered list item</li>
+          </ol>
+        </li>
+      </ul>
 
 <!--
       <ul>
@@ -56,9 +64,6 @@
       
   -->
 
-      <ul> 
-        <li>List4</li>
-      </ul>  
       
       <h2 clsaa="subtitle" id="services" style="color: steelblue;">Services</h2>
 
