advace-selectors(attri-selecor)

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         Block elements-->
 
         <!-- inline container example(if length of word increase, it 
-            taks more space from the inline onle it wont go next line)-->
+            taks more space from the inline only it wont go next line)-->
 
         <a href="#">Link1</a>
         <a href="#">Link2</a>
