--- a/index1.html
+++ b/index1.html
@@ -85,6 +85,9 @@
       </table>
 
       <img src="../html/horse.jpeg">
+      <!--
+     <a href="horse.jpeg">horse</a>s
+
       <h2>Contact Us</h2>
       <form>
         <input type="text" placeholder="Full Name">
